--- a/market-search-fe/src/index.css
+++ b/market-search-fe/src/index.css
@@ -2,7 +2,7 @@ html{
   font-size: 10px;
 }
 
-body {
+body, #root {
   margin: 0;
   font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', 'Roboto', 'Oxygen',
     'Ubuntu', 'Cantarell', 'Fira Sans', 'Droid Sans', 'Helvetica Neue',
@@ -10,5 +10,12 @@ body {
   -webkit-font-smoothing: antialiased;
   -moz-osx-font-smoothing: grayscale;
   font-size: 10px;
+
+  display: flex;
+  flex-direction: column;
+  justify-content: space-between;
 }
 
+#root {
+  height: 100%;
+}
